@@ -42,6 +42,7 @@
 * Stripe: Update supported countries list [shasum]
 * AuthorizeNet: Update supported countries list [shasum]
 * Payflow: Update supported countries list [shasum]
+* Braintree Blue: Add remote test to verify card token [shasum]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
